--- a/WebApplication-HomeAngularJS/WebApplication-HomeAngularJS.csproj
+++ b/WebApplication-HomeAngularJS/WebApplication-HomeAngularJS.csproj
@@ -257,6 +257,7 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
+    <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
