--- a/WebApplication-HomeAngularJS/WebApplication-HomeAngularJS.csproj
+++ b/WebApplication-HomeAngularJS/WebApplication-HomeAngularJS.csproj
@@ -250,6 +250,7 @@
   <ItemGroup>
     <Content Include="app\app.js" />
     <Content Include="app\controllers\appController.js" />
+    <Content Include="app\views\Index.html" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -311,7 +312,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="app\directives\" />
-    <Folder Include="app\views\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
