commit edmx related files

--- a/WebApplication-HomeAngularJS/Web.config
+++ b/WebApplication-HomeAngularJS/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication-HomeAngularJS-20170412043635.mdf;Initial Catalog=aspnet-WebApplication-HomeAngularJS-20170412043635;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="masterEntities" connectionString="metadata=res://*/CaseStudyEdmx.csdl|res://*/CaseStudyEdmx.ssdl|res://*/CaseStudyEdmx.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HOME-PC\SQLEXPRESS;initial catalog=master;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
