--- a/WebApplication-HomeAngularJS/WebApplication-HomeAngularJS.csproj
+++ b/WebApplication-HomeAngularJS/WebApplication-HomeAngularJS.csproj
@@ -234,22 +234,8 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
-    <Compile Include="CaseStudyEdmx.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CaseStudyEdmx.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="CaseStudyEdmx.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CaseStudyEdmx.tt</DependentUpon>
-    </Compile>
-    <Compile Include="CaseStudyEdmx.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>CaseStudyEdmx.edmx</DependentUpon>
-    </Compile>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -257,28 +243,11 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Category.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="MSreplication_options.cs">
-      <DependentUpon>CaseStudyEdmx.tt</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
-    <Compile Include="spt_fallback_db.cs">
-      <DependentUpon>CaseStudyEdmx.tt</DependentUpon>
-    </Compile>
-    <Compile Include="spt_fallback_dev.cs">
-      <DependentUpon>CaseStudyEdmx.tt</DependentUpon>
-    </Compile>
-    <Compile Include="spt_fallback_usg.cs">
-      <DependentUpon>CaseStudyEdmx.tt</DependentUpon>
-    </Compile>
-    <Compile Include="spt_monitor.cs">
-      <DependentUpon>CaseStudyEdmx.tt</DependentUpon>
-    </Compile>
-    <Compile Include="spt_values.cs">
-      <DependentUpon>CaseStudyEdmx.tt</DependentUpon>
-    </Compile>
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -291,16 +260,6 @@
     <Content Include="app\shared\sidebar\sidebarDirective.js" />
     <Content Include="app\shared\sidebar\sidebarView.html" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
-    <Content Include="CaseStudyEdmx.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>CaseStudyEdmx.edmx</DependentUpon>
-      <LastGenOutput>CaseStudyEdmx.Context.cs</LastGenOutput>
-    </Content>
-    <Content Include="CaseStudyEdmx.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>CaseStudyEdmx.edmx</DependentUpon>
-      <LastGenOutput>CaseStudyEdmx.cs</LastGenOutput>
-    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -331,13 +290,6 @@
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <EntityDeploy Include="CaseStudyEdmx.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>CaseStudyEdmx.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="CaseStudyEdmx.edmx.diagram">
-      <DependentUpon>CaseStudyEdmx.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
